--- a/mourad.ipynb
+++ b/mourad.ipynb
@@ -2,77 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.immoweb.be/en/search/BUY/HOUSE?countries=BE\n",
-      "https://www.immoweb.be/en/classified/new-real-estate-project-houses/for-sale/brakel/9660/10560751\n",
-      "https://www.immoweb.be/en/classified/villa/for-sale/andenne/5300/10561076\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/woluwe-saint-lambert/1200/10560729\n",
-      "https://www.immoweb.be/en/classified/apartment-block/for-sale/genval/1332/10561424\n",
-      "https://www.immoweb.be/en/classified/mixed-use-building/for-sale/antwerp/2060/10559817\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/oupeye/4680/10557728\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/seraing/4100/10557227\n",
-      "https://www.immoweb.be/en/classified/new-real-estate-project-houses/for-sale/geraardsbergen/9500/10557395\n",
-      "https://www.immoweb.be/en/classified/new-real-estate-project-houses/for-sale/wielsbeke/8710/10559981\n",
-      "https://www.immoweb.be/en/classified/new-real-estate-project-houses/for-sale/otegem/8553/10559828\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/anderlecht/1070/10559699\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/rixensart/1330/10557110\n",
-      "https://www.immoweb.be/en/classified/new-real-estate-project-houses/for-sale/olen/2250/10557604\n",
-      "https://www.immoweb.be/en/classified/villa/for-sale/rixensart/1330/10557112\n",
-      "https://www.immoweb.be/en/classified/new-real-estate-project-houses/for-sale/gent%20sint-amandsberg/9040/10557390\n",
-      "https://www.immoweb.be/en/classified/mixed-use-building/for-sale/aalst/9300/10557403\n",
-      "https://www.immoweb.be/en/classified/new-real-estate-project-houses/for-sale/westerlo/2260/10556366\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/gooik/1755/10417975\n",
-      "https://www.immoweb.be/en/classified/bungalow/for-sale/steenokkerzeel/1820/10555241\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/ixelles/1050/10554707\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/clavier-station/4560/10553399\n",
-      "https://www.immoweb.be/en/classified/new-real-estate-project-houses/for-sale/beuzet/5030/10554011\n",
-      "https://www.immoweb.be/en/classified/villa/for-sale/hotton/6990/10552972\n",
-      "https://www.immoweb.be/en/classified/new-real-estate-project-houses/for-sale/noorderwijk/2200/10553535\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/jumet/6040/10538585\n",
-      "https://www.immoweb.be/en/classified/villa/for-sale/rixensart%20genval/1332/10560702\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/gavere/9890/10547309\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/gavere/9890/10547307\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/waregem/8790/10560706\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/ixelles/1050/10561440\n",
-      "https://www.immoweb.be/en/classified/apartment/for-sale/de%20panne/8660/10561899\n",
-      "https://www.immoweb.be/en/classified/apartment/for-sale/leuven/3000/10561896\n",
-      "https://www.immoweb.be/en/classified/apartment/for-sale/de%20haan/8420/10561895\n",
-      "https://www.immoweb.be/en/classified/apartment/for-sale/oostende/8400/10501413\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/hoeselt/3730/10561894\n",
-      "https://www.immoweb.be/en/classified/apartment/for-sale/aalter/9881/10455939\n",
-      "https://www.immoweb.be/en/classified/town-house/for-sale/kortrijk/8500/10561893\n",
-      "https://www.immoweb.be/en/classified/apartment/for-sale/brugge/8000/10561892\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/menen/8930/10561891\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/oudenburg/8460/10561889\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/oostende/8400/10561888\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/emblem/2520/10561866\n",
-      "https://www.immoweb.be/en/classified/country-cottage/for-sale/heestert/8551/10561865\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/seraing/4102/10561864\n",
-      "https://www.immoweb.be/en/classified/duplex/for-sale/aalst/9320/10561858\n",
-      "https://www.immoweb.be/en/classified/apartment/for-sale/harelbeke/8530/10561854\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/anzegem/8570/10561853\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/deerlijk/8540/10561852\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/desselgem/8792/10561851\n",
-      "https://www.immoweb.be/en/classified/apartment/for-sale/tielt/8700/10561850\n",
-      "https://www.immoweb.be/en/classified/apartment/for-sale/tielt/8700/10561849\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/ekeren/2180/10521510\n",
-      "https://www.immoweb.be/en/classified/apartment/for-sale/moignel%C3%89e/5060/10561846\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/auvelais/5060/10561845\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/moignel%C3%89e/5060/10561844\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/rebaix/7804/10561843\n",
-      "https://www.immoweb.be/en/classified/apartment/for-sale/deurne/2100/10438587\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/hoeselt/3730/10561840\n",
-      "https://www.immoweb.be/en/classified/house/for-sale/baillonville/5377/10421977\n",
-      "https://www.immoweb.be/en/classified/apartment/for-sale/tongeren/3700/10561839\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -93,6 +25,49 @@
     "house_urls = [listing[\"href\"] for listing in house_listings]\n",
     "for url in house_urls:\n",
     "    print(url)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\"house/for-sale?countries=BE&priceType=SALE_PRICE&page=1&orderBy=relevance\"\n",
+    "\"https://www.immoweb.be/en/search/house/for-sale?countries=BE&priceType=SALE_PRICE&page=333&orderBy=relevance\"\n",
+    "root_url = \"https://www.immoweb.be/en/search/\"\n",
+    "estate_types = ['house', 'apartment']\n",
+    "max_page = 333  # Set the maximum page number to 333\n",
+    "immo_link = []\n",
+    "for estate in estate_types:\n",
+    "    page = 1\n",
+    "    while page <= max_page:\n",
+    "        url = f\"{root_url}{estate}/for-sale?countries=BE&page={page}&orderBy=relevance\"\n",
+    "        req = requests.get(url)\n",
+    "        print(\"Page: \", page)\n",
+    "        print(\"Status Code:\", req.status_code)\n",
+    "\n",
+    "        soup = BeautifulSoup(req.content, 'html.parser')\n",
+    "        card_results = soup.find_all('article', class_='card--result')\n",
+    "\n",
+    "        href_links = []\n",
+    "\n",
+    "        for article in card_results:\n",
+    "            link = article.find('a', class_='card__title-link')\n",
+    "            if link:\n",
+    "                href_links.append(link['href'])\n",
+    "\n",
+    "        for i, link in enumerate(href_links, 1):\n",
+    "            immo_link = immo_link.append(link)\n",
+    "            print(i, link)\n",
+    "\n",
+    "\n",
+    "        page += 1\n",
+    "\n",
+    "print(\"Scraping completed.\")\n",
+    "\n"
    ]
   }
  ],
