--- a/mourad.ipynb
+++ b/mourad.ipynb
@@ -29,9 +29,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Page:  1\n",
+      "Status Code: 200\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 28\u001b[0m\n\u001b[1;32m     25\u001b[0m                 href_links\u001b[39m.\u001b[39mappend(link[\u001b[39m'\u001b[39m\u001b[39mhref\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m     27\u001b[0m         \u001b[39mfor\u001b[39;00m i, link \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(href_links, \u001b[39m1\u001b[39m):\n\u001b[0;32m---> 28\u001b[0m             immo_link \u001b[39m=\u001b[39m immo_link\u001b[39m.\u001b[39;49mappend(link)\n\u001b[1;32m     31\u001b[0m         page \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     33\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mScraping completed.\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'append'"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -61,12 +81,8 @@
     "\n",
     "        for i, link in enumerate(href_links, 1):\n",
     "            immo_link = immo_link.append(link)\n",
-    "            print(i, link)\n",
-    "\n",
-    "\n",
     "        page += 1\n",
     "\n",
-    "print(\"Scraping completed.\")\n",
     "\n"
    ]
   },
@@ -209,7 +225,7 @@
     "            # print(data_dict)\n",
     "            # Replace empty values with 'none'\n",
     "            def replace_empty_with_none(dict_to_clean):\n",
-    "                for key, value in dict_to_value.items():\n",
+    "                for key, value in dict_to_clean.items():\n",
     "                    if isinstance(value, dict):\n",
     "                        replace_empty_with_none(value)\n",
     "                    elif isinstance(value, str) and not value:\n",
@@ -224,10 +240,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Nepal': 'none', 'Italy': 'Rome', 'England': 'London'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "example_dict = {\"Nepal\": \"\", \"Italy\": \"Rome\", \"England\": \"London\"}\n",
+    "\n",
+    "def replace_empty_with_none(dict_to_clean):\n",
+    "        for key, value in dict_to_clean.items():\n",
+    "            if isinstance(value, dict):\n",
+    "                replace_empty_with_none(value)\n",
+    "            elif isinstance(value, str) and not value:\n",
+    "                dict_to_clean[key] = 'none'\n",
+    "\n",
+    "\n",
+    "replace_empty_with_none(example_dict)\n",
+    "print(example_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def get_url_list():\n",
+    "    for estate in estate_types:\n",
+    "        page = 1\n",
+    "        while page <= max_page:\n",
+    "            url = f\"{root_url}{estate}/for-sale?countries=BE&page={page}&orderBy=relevance\"\n",
+    "            req = requests.get(url)\n",
+    "            soup = BeautifulSoup(req.content, 'html.parser')\n",
+    "            card_results = soup.find_all('article', class_='card--result')\n",
+    "            immo_links = []\n",
+    "            for article in card_results:\n",
+    "                link = article.find('a', class_='card__title-link')\n",
+    "                if link:\n",
+    "                    immo_links.append(link['href'])\n",
+    "            page += 1\n",
+    "    print(immo_links)\n",
+    "\n",
+    "get_url_list()\n"
+   ]
   },
   {
    "attachments": {},
