update_test_main_melike

--- a/TEST_POOL_MAIN.ipynb
+++ b/TEST_POOL_MAIN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,15 +58,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19920\n",
-      "pool_time:  48.20274774997961\n"
+      "664\n",
+      "pool_time:  74.62328370899195\n"
      ]
     }
    ],
@@ -153,6 +153,7 @@
     "    print(req.status_code)\n",
     "    read_html_prop = pd.read_html(req.text)\n",
     "    df_one_property = pd.concat(read_html_prop, ignore_index=True)\n",
+    "    #DATALAYER\n",
     "\n",
     "    # prop_info = df_one_property.iloc[:,1]\n",
     "    house_dict = {}\n",
@@ -177,12 +178,34 @@
     "    \"\"\"\n",
     "    take info from get_one_prop_info() as json or dict,\n",
     "    and add them to a csv for only one property.\n",
+    "    Mourad\n",
     "    \"\"\"\n",
-    "    pass\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def get_collective_data():\n",
     "    \"\"\"\n",
     "    clean_data_to_csv() for all urls from get_url_list() using pool\n",
+    "    \"\"\"\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cleaning_data_from_csv():\n",
+    "    \"\"\"\n",
+    "    \n",
     "    \"\"\"\n",
     "    pass"
    ]
