some_updates_new_test_melike

--- a/NEW_TEST_POOL_MAIN.ipynb
+++ b/NEW_TEST_POOL_MAIN.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-
    "execution_count": 4,
-
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +51,7 @@
     "    \n",
     "    with ThreadPoolExecutor() as pool:\n",
     "        all_immo_links = list(pool.map(get_from_search_page, search_links))\n",
-    "    return all_immo_links"
+    "    return all_immo_links[0]"
    ]
   },
   {
@@ -71,7 +69,6 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -168,7 +165,6 @@
      "output_type": "execute_result"
     }
    ],
-
    "source": [
     "def get_one_property_info(url_one_property:str) -> Dict: \n",
     "    req = requests.get(url_one_property)\n",
@@ -196,7 +192,6 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -212,13 +207,11 @@
    "source": [
     "def clean_data_to_csv(original_dict):\n",
     "\n",
-
     "    \"\"\"\n",
     "    take info from get_one_prop_info() as json or dict,\n",
     "    and add them to a csv for only one property.\n",
     "    Mourad\n",
     "    \"\"\"\n",
-
     "    has_fireplace = int(original_dict.get('How many fireplaces?'))\n",
     "    new_dict = {\n",
     "    \"Id\": original_dict.get('id'), \n",
@@ -243,7 +236,6 @@
     "    print(new_dict)\n",
     "    pass\n",
     "clean_data_to_csv(get_one_property_info(\"https://www.immoweb.be/en/classified/villa/for-sale/brasschaat/2930/10459437\"))"
-
    ]
   },
   {
@@ -267,6 +259,30 @@
     "            collective_data.append( list(pool.map(clean_data_to_csv, each_data)))  \n",
     "    \n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#melike\n",
+    "all_data_file = \"all_data.csv\"\n",
+    "def adding_one_line_into_csv():\n",
+    "    with open (all_data_file, \"w\",newline=\"\") as file:\n",
+    "        df = pd.DataFrame(get_one_property_info(), )\n",
+    "        df.to_csv(file)\n",
+    "\n",
+    "\n",
+    "def get_collective_data():\n",
+    "    \"\"\"\n",
+    "    clean_data_to_csv() for all urls from get_url_list() using pool\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    with ThreadPoolExecutor() as pool:\n",
+    "            \n",
+    "        pool.map(clean_data_to_csv(), get_url_list())  "
    ]
   },
   {
@@ -550,9 +566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-
    "version": "3.10.6"
-
   },
   "orig_nbformat": 4
  },
