new_immoweb_main_melike

--- a/NEW_TEST_POOL_MAIN.ipynb
+++ b/NEW_TEST_POOL_MAIN.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -233,8 +233,11 @@
     "    \"State of the building\": original_dict.get('Building condition'),\n",
     "    \"Url\": original_dict.get('url')\n",
     "    }\n",
+    "    with open (\"all_data.csv\", \"w\") as file:\n",
+    "        file.write(\",\".join(new_dict.keys()))\n",
+    "        file.write(\"\\n\")\n",
     "    print(new_dict)\n",
-    "    pass\n",
+    "    \n",
     "clean_data_to_csv(get_one_property_info(\"https://www.immoweb.be/en/classified/villa/for-sale/brasschaat/2930/10459437\"))"
    ]
   },
