--- a/melike.ipynb
+++ b/melike.ipynb
@@ -219,10 +219,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 46\u001b[0m\n\u001b[1;32m     44\u001b[0m main \u001b[39m=\u001b[39m Immoweb()\n\u001b[1;32m     45\u001b[0m start \u001b[39m=\u001b[39m perf_counter()\n\u001b[0;32m---> 46\u001b[0m \u001b[39mprint\u001b[39m(main\u001b[39m.\u001b[39;49mnew())\n\u001b[1;32m     47\u001b[0m end\u001b[39m=\u001b[39mperf_counter()\n\u001b[1;32m     48\u001b[0m pool_time \u001b[39m=\u001b[39m end\u001b[39m-\u001b[39mstart\n",
+      "Cell \u001b[0;32mIn[1], line 40\u001b[0m, in \u001b[0;36mImmoweb.new\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mnew\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m     39\u001b[0m     \u001b[39mwith\u001b[39;00m ThreadPoolExecutor() \u001b[39mas\u001b[39;00m pool:\n\u001b[0;32m---> 40\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mall_immo_links \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39;49m(pool\u001b[39m.\u001b[39;49mmap(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_link_from_search_page(), \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msearch_links))\n\u001b[1;32m     41\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mall_immo_links\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/concurrent/futures/_base.py:619\u001b[0m, in \u001b[0;36mExecutor.map.<locals>.result_iterator\u001b[0;34m()\u001b[0m\n\u001b[1;32m    616\u001b[0m \u001b[39mwhile\u001b[39;00m fs:\n\u001b[1;32m    617\u001b[0m     \u001b[39m# Careful not to keep a reference to the popped future\u001b[39;00m\n\u001b[1;32m    618\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 619\u001b[0m         \u001b[39myield\u001b[39;00m _result_or_cancel(fs\u001b[39m.\u001b[39;49mpop())\n\u001b[1;32m    620\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    621\u001b[0m         \u001b[39myield\u001b[39;00m _result_or_cancel(fs\u001b[39m.\u001b[39mpop(), end_time \u001b[39m-\u001b[39m time\u001b[39m.\u001b[39mmonotonic())\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/concurrent/futures/_base.py:317\u001b[0m, in \u001b[0;36m_result_or_cancel\u001b[0;34m(***failed resolving arguments***)\u001b[0m\n\u001b[1;32m    315\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    316\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 317\u001b[0m         \u001b[39mreturn\u001b[39;00m fut\u001b[39m.\u001b[39;49mresult(timeout)\n\u001b[1;32m    318\u001b[0m     \u001b[39mfinally\u001b[39;00m:\n\u001b[1;32m    319\u001b[0m         fut\u001b[39m.\u001b[39mcancel()\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/concurrent/futures/_base.py:449\u001b[0m, in \u001b[0;36mFuture.result\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    447\u001b[0m     \u001b[39mraise\u001b[39;00m CancelledError()\n\u001b[1;32m    448\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_state \u001b[39m==\u001b[39m FINISHED:\n\u001b[0;32m--> 449\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m__get_result()\n\u001b[1;32m    451\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_condition\u001b[39m.\u001b[39mwait(timeout)\n\u001b[1;32m    453\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_state \u001b[39min\u001b[39;00m [CANCELLED, CANCELLED_AND_NOTIFIED]:\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/concurrent/futures/_base.py:401\u001b[0m, in \u001b[0;36mFuture.__get_result\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    399\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_exception:\n\u001b[1;32m    400\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 401\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_exception\n\u001b[1;32m    402\u001b[0m     \u001b[39mfinally\u001b[39;00m:\n\u001b[1;32m    403\u001b[0m         \u001b[39m# Break a reference cycle with the exception in self._exception\u001b[39;00m\n\u001b[1;32m    404\u001b[0m         \u001b[39mself\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/concurrent/futures/thread.py:58\u001b[0m, in \u001b[0;36m_WorkItem.run\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     55\u001b[0m     \u001b[39mreturn\u001b[39;00m\n\u001b[1;32m     57\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m---> 58\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfn(\u001b[39m*\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mkwargs)\n\u001b[1;32m     59\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mBaseException\u001b[39;00m \u001b[39mas\u001b[39;00m exc:\n\u001b[1;32m     60\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfuture\u001b[39m.\u001b[39mset_exception(exc)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "import requests, json, lxml, re, csv\n",
+    "from bs4 import BeautifulSoup\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
+    "from time import perf_counter\n",
+    "import pandas as pd\n",
+    "from typing import List, Dict\n",
+    "\n",
+    "class Immoweb():\n",
+    "    root_url = \"https://www.immoweb.be/en/search/\"\n",
+    "    all_data_file = \"all_data.csv\"\n",
+    "    search_links = []\n",
+    "    estate_types = ['house', 'apartment']\n",
+    "    all_immo_links = []\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.search_links = self.get_search_list()\n",
+    "        self.immo_links = self.get_link_from_search_page()\n",
+    "        \n",
+    "    def get_search_list(self) -> List:\n",
+    "        for estate in self.estate_types:\n",
+    "            for page in range(1,3): #for testing purpose I changed from 334 to 2\n",
+    "                url = f\"{self.root_url}{estate}/for-sale?countries=BE&page={page}&orderBy=relevance\"\n",
+    "                self.search_links.append(url)\n",
+    "        return self.search_links\n",
+    "\n",
+    "    def get_link_from_search_page(self):\n",
+    "        with ThreadPoolExecutor() as pool:\n",
+    "            for link in self.search_links:\n",
+    "                req = requests.get(link)\n",
+    "                soup = BeautifulSoup(req.content, 'html.parser')\n",
+    "                card_results = soup.find_all('article', class_='card--result')\n",
+    "                immo_links = []\n",
+    "                for article in card_results:\n",
+    "                    link = article.find('a', class_='card__title-link')\n",
+    "                    if link:\n",
+    "                        immo_links.append(link['href'])\n",
+    "            # return immo_links\n",
+    "\n",
+    "    def new(self):\n",
+    "        with ThreadPoolExecutor() as pool:\n",
+    "            self.all_immo_links = list(pool.map(self.get_link_from_search_page(), self.search_links))\n",
+    "        return self.all_immo_links\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main = Immoweb()\n",
+    "    start = perf_counter()\n",
+    "    print(main.new())\n",
+    "    end=perf_counter()\n",
+    "    pool_time = end-start\n",
+    "    print(\"pool_time: \", pool_time)"
+   ]
   },
   {
    "cell_type": "code",
